Fix for OSQuery immutable lists